outputs/tsp_constructive-constructive/2025-09-20_10-02-31/evaluations/problem_eval-7991193517368470948_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaulting to local when few nodes remain and global when many remain, while alternating the decision when the ratio is balanced.}
                                                                                                                                     ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaulting to local when few nodes remain and global when many remain, while alternating the decision when the ratio is balanced.}
                                                                                                                                     ^
SyntaxError: unmatched '}'
